--- a/src/Admin/userAEU.form
+++ b/src/Admin/userAEU.form
@@ -200,6 +200,9 @@
               <SubComponents>
                 <Component class="javax.swing.JButton" name="remove">
                   <Properties>
+                    <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                      <Color blue="b8" green="33" red="0" type="rgb"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="Remove"/>
                   </Properties>
                   <Events>
@@ -213,6 +216,12 @@
                 </Component>
                 <Component class="javax.swing.JButton" name="addProfile">
                   <Properties>
+                    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                      <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                    </Property>
+                    <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                      <Color blue="b8" green="33" red="0" type="rgb"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="Select"/>
                   </Properties>
                   <Events>
